--- a/intro_to_inverse_problems.tex
+++ b/intro_to_inverse_problems.tex
@@ -39,9 +39,9 @@
 \renewcommand{\baselinestretch}{1.2} % Spaces manuscript for easy reading
 
 % Formatting definitions, propositions, etc. 
-\newtheorem*{definition}{Definition}
-\newtheorem*{prop}{Proposition}
-\newtheorem*{lemma}{Lemma}
+\newtheorem{definition}{Definition}
+\newtheorem{prop}{Proposition}
+\newtheorem{lemma}{Lemma}
 
 \begin{document}
 
@@ -187,8 +187,9 @@ paper will treat the solution of \eqref{inverse_problem} as purely deterministic
  to the study of inverse problems, are treated from scratch. As a notational note, $B(X, Y)$ denotes the space of all bounded
  (or equivalently, continuous) linear operators from $X$ to $Y$. For $F \in B(X, Y)$ we write $\norm{F}$
  to refer to the operator norm of $F$. $\mathcal{R}(F)$ and $\mathcal{N}(F)$ refer to the range and 
- null space of $F$, respectively.  
- 
+ null space of $F$, respectively. Finally, if a bounded linear map shares the same domain and codomain we write 
+ $F \in B(X, X) = B(X)$ and call $F$ an \textit{operator} on $X$. 
+  
 \subsection{Adjoints}
  \begin{definition} 
  (Adjoint) Let $F \in B(X, Y)$. Then the adjoint operator of $F$, $F^*: Y \to X$, is defined by 
@@ -263,7 +264,7 @@ Recall from linear algebra that if $A \in \mathbb{R}^{n x m}$, then the row spac
 the null space, and similarly the column space is orthogonal to the null space of $A^\prime$. The following
 result generalizes this idea to Hilbert space, replacing the transpose with the adjoint. 
 
-\begin{prop} 
+\begin{prop} \label{subspace_equalities}
 Let $F \in B(X, Y)$. Then, 
 \begin{itemize} 
 \item $\mathcal{R}(F)^\perp = \mathcal{N}(F^*)$
@@ -314,6 +315,10 @@ the original equation, we obtain $FF^*y^\prime = y$.
 
 \subsection{Projections}
 
+Throughout this section we use the fact that if $M \subset H$ is a closed subspace of a Hilbert space, then 
+$H$ may be written as the direct sum $H = M \oplus M^\perp$. For a given $x_i \in H$ I will write $m_i \in M$ and 
+$m_i^\perp \in M^\perp$ to denote the vectors giving the unique decomposition $x_i = m_i + m_i^\perp$. 
+
 \begin{definition} 
 (Projection Operator) Let $M$ be a closed subspace of a Hilbert space $H$. Then each $x \in H$ has a unique
 representation $x = m + m^\perp$, where $m \in M$ and $m \in M^\perp$. The operator $P_M: H \to H$ defined 
@@ -323,7 +328,7 @@ by $P_Mx = m$ is called the projection operator onto $M$.
 \begin{prop} 
 If $M \subset H$ is a closed subspace, then: 
 \begin{itemize} 
-\item $P_M \in B(H, H)$
+\item $P_M \in B(H)$
 \item If $M \neq \{0\}$, then $\norm{P_M} = 1$
 \end{itemize} 
 \end{prop}
@@ -336,18 +341,52 @@ $P_M (\alpha x_1) = \alpha P_M x_1$ follows by the same reasoning, so $P_M$ is l
 
 To show that $P_M$ is bounded, we apply the generalized Pythagorean Theorem to conclude: 
 \[\norm{P_M x}_H^2 = \norm{m}_H^2 \leq \norm{m}_H^2 + \norm{m^\perp}_H^2 = \norm{x}_H^2\]
-and therefore $\norm{P_M x}_H \leq \norm{x}_H$ for all $x \in H$ so $P_M$ is bounded. Thus, $P_M \in B(H, H)$
+and therefore $\norm{P_M x}_H \leq \norm{x}_H$ for all $x \in H$ so $P_M$ is bounded. Thus, $P_M \in B(H)$
 and $\norm{P_M} \leq 1$. 
 
 For the reverse inequality, since $M \neq \{0\}$ we may select a vector $m \in M$ such that $\norm{m}_H = 1$.
 Then $\norm{P_M m}_H = \norm{m}_H = 1$. This shows $\norm{P_M} \geq 1$. Therefore, $\norm{P_M} = 1$. 
 \end{proof} 
 
+\begin{prop} 
+An operator $P \in B(H)$ is a projection operator if and only if it satisfies the following two properties: 
+\begin{itemize} 
+\item $P$ is idempotent; that is, $P^2 = P$
+\item $P$ is self-adjoint; that is, $P^* = P$
+\end{itemize} 
+\end{prop} 
 
+\begin{proof} 
+First suppose $P$ is a projection operator onto some closed subspace $M \subset H$. $P$ is clearly seen 
+to be idempotent by applying the definition of a projection twice. To show that $P$ is self-adjoint, let $x_1, x_2 \in H$
+and consider: 
+\begin{align*} 
+(Px_1|x_2) &= (m_1|m_2 + m_2^\perp) = (m_1|m_2) \\
+(x_1|Px_2) &= (m_1 + m_1^\perp|m_2) = (m_2|m_2)
+\end{align*} 
+Therefore, $(Px_1|x_2) = (x_1|Px_2)$ for all $x_1, x_2 \in H$ so $P^* = P$. 
 
+Now suppose $P$ is idempotent and self-adjoint. I claim that $P$ is a projection
+upon $\R(P)$. Since $P^* = P$ it follows from proposition \eqref{subspace_equalities}
+that $\overline{\R(P)} = \N(P)^\perp$. Let $M = \overline{R(P)}$ so that $H = M \oplus M^\perp$. 
+Let $m \in M$. Then there exists a sequence $(m_i) \subset \R(P)$ such that $m_i \to m$. Then for any $n \in \N(P)$,
+\begin{align*} 
+(Pm|n) &= (P(\lim_{i \to \infty} m_i)|n) \\
+            &= \lim_{i \to \infty} (Pm_i|n) \\
+            &= \lim_{i \to \infty} (m_i|Pn) \\
+            &= \lim_{i \to \infty} (m_i|0) \\
+            &= 0
+\end{align*} 
+using the continuity of $P$ and the inner product, as well as the assumption that $P^* = P$. 
+Therefore, $Pm \in \N(P)^\perp = M$. 
+Next, let $m^\perp \in M^\perp = \overline{\R(P)}^\perp$. Then for all $x \in H$, 
+\[(Pm^\perp|x) = (m^\perp|Pm) = 0\]
+since $Pm \in M$, as shown above. 
 
-
-
+Therefore, for any $x \in H$, we have shown that $x$ may be decomposed as $x = m + m^\perp$
+and that \[Px = P(m + m^\perp) = Pm + Pm^\perp = m + 0 = m \in M\]
+Therefore, $P$ is an orthogonal projection operator onto $M = \overline{\R(P)}$. 
+\end{proof} 
 
 % Section 3: Formulating Linear Inverse Problems in Hilbert Space
 \section{Formulating Linear Inverse Problems in Hilbert Space} \label{formulation}
