--- a/intro_to_inverse_problems.tex
+++ b/intro_to_inverse_problems.tex
@@ -42,6 +42,7 @@
 \newtheorem{definition}{Definition}
 \newtheorem{prop}{Proposition}
 \newtheorem{lemma}{Lemma}
+\newtheorem{thm}{Theorem}
 
 \begin{document}
 
@@ -325,11 +326,12 @@ representation $x = m + m^\perp$, where $m \in M$ and $m \in M^\perp$. The opera
 by $P_Mx = m$ is called the projection operator onto $M$. 
 \end{definition}
 
-\begin{prop} 
+\begin{prop} \label{projection_properties}
 If $M \subset H$ is a closed subspace, then: 
 \begin{itemize} 
 \item $P_M \in B(H)$
 \item If $M \neq \{0\}$, then $\norm{P_M} = 1$
+\item $I - P_M = P_{M^\perp}$
 \end{itemize} 
 \end{prop}
 
@@ -346,6 +348,9 @@ and $\norm{P_M} \leq 1$.
 
 For the reverse inequality, since $M \neq \{0\}$ we may select a vector $m \in M$ such that $\norm{m}_H = 1$.
 Then $\norm{P_M m}_H = \norm{m}_H = 1$. This shows $\norm{P_M} \geq 1$. Therefore, $\norm{P_M} = 1$. 
+
+The final result follows from, \[(I - P_M)(x) = (I - P_M)(m + m^\perp) = (m + m^\perp) - m = m^\perp = P_{M^\perp}x\]
+Therefore, $I - P_M = P_{M^\perp}$. 
 \end{proof} 
 
 \begin{prop} 
@@ -388,6 +393,24 @@ and that \[Px = P(m + m^\perp) = Pm + Pm^\perp = m + 0 = m \in M\]
 Therefore, $P$ is an orthogonal projection operator onto $M = \overline{\R(P)}$. 
 \end{proof} 
 
+The projection operator offers us new notation in which to express the Hilbert projection theorem (Luenberger 1969, p. 51). 
+\begin{thm} \label{projection_theorem}
+Let $M \subset H$ be a closed subspace and $x \in H$. Then the following statements are equivalent. 
+\begin{itemize} 
+\item $\norm{x - \hat{m}}_H \leq \norm{x - m}_H$ for all $m \in M$ 
+\item $\hat{m} \in M$ and $x - \hat{m} \in M^\perp$
+\item $\hat{m} = P_M x$
+\end{itemize} 
+\end{thm} 
+
+\begin{proof} 
+The first two statements are equivalent by the projection theorem, so it suffices to show that the last two 
+statements imply each other. If the second statement holds, then $x = \hat{m} + (x - \hat{m})$ is the unique 
+orthogonal decomposition for $x$ with respect to $M$. Thus, $P_M x = \hat{m}$. Now suppose the third 
+statement holds. By definition of the projection operator $\hat{m} \in M$ and by proposition 
+(\ref{projection_properties}),  $x - \hat{m} = (I - P_M)x \in M^\perp$. 
+\end{proof} 
+
 % Section 3: Formulating Linear Inverse Problems in Hilbert Space
 \section{Formulating Linear Inverse Problems in Hilbert Space} \label{formulation}
 
@@ -401,10 +424,8 @@ then the existence of a unique $\hat{y} \in Y$ minimizing $\norm{y^\prime - y}_Y
  over $\mathcal{F}$ is guaranteed. However, we have not assumed that $F$ is injective and hence this does not 
  imply the uniqueness of a least-squares solution $\hat{x}$. Therefore, we must study the set of all 
  least-squares solutions, with an emphasis on the solution of minimal norm. 
-
-\subsection{Characterization of Solutions}
-
-\begin{definition} 
+ 
+ \begin{definition} 
 (Generalized Solutions) 
  \begin{itemize}
  \item $\hat{x} \in X$ is called a least-squares solution of \eqref{linear_least_squares} if $\norm{F\hat{x} - y}_Y \leq \norm{Fx - y}_Y$ for all $x \in X$. $\mathbb{L}$ denotes the set of all such solutions. 
@@ -412,61 +433,7 @@ then the existence of a unique $\hat{y} \in Y$ minimizing $\norm{y^\prime - y}_Y
  \end{itemize} 
 \end{definition} 
 
-\subsubsection{Assuming Closed Range}
-
- Note that in general $\mathbb{L}$ may be empty. The following result relies on the assumption that $\R(F)$ is closed to ensure the existence of a solution. 
- 
- \begin{prop}
- Suppose $\R(F)$ is closed. Then \eqref{linear_least_squares} has a unique minimal norm least-squares solution $x^\dagger$. Moreover, 
- $x^\dagger \in \N(F)^\perp$ and  $\mathbb{L} = x^\dagger + \N(F)$.
- \end{prop} 
- 
-\begin{proof} 
-Since $\R(F)$ is closed, there exists a unique $\hat{y} \in Y$ satisfying $\hat{y} = \min_{y^\prime \in \R(F)} \norm{y^\prime - y}_{Y}$. Let $\hat{x} \in \mathbb{L}$ such that $F\hat{x} = \hat{y}$ (Luenberger 1969, p. 64). Then, 
- \begin{align*} 
- \mathbb{L} &= \{x \in X: Fx = \hat{y}\} \\
-                   &= \{x \in X: F(x - \hat{x}) = 0\} \\
-                   &= \hat{x} + \{x - \hat{x} \in X: F(x - \hat{x}) = 0\} \\
-                   &= \hat{x} + \N(F)
- \end{align*} 
- Therefore, $ \mathbb{L}$ is a translation of the closed subspace $\N(F)$. It then follows immediately that there exists a unique $x^\dagger \in \mathbb{L}$ of minimal norm, and moreover that $x^\dagger$ is orthogonal to $\N(F)$ (Luenberger 1969, p. 64). From the above derivation we clearly also have $\mathbb{L} = x^\dagger + \N(F)$
-\end{proof} 
-
-If either $X$ or $Y$ is finite-dimensional, then $\R(F)$ is closed and hence solutions always exist. However, there are important applications defined in 
-infinite-dimensional spaces where $\R(F)$ is not guaranteed to be closed. In these cases, we will have to concern ourselves
-with the fact that a solution may not exist. 
-
-\subsubsection{Not Assuming Closed Range}
-
-In the above results, we rely on the assumption that $\R(F)$ is closed to guarantee the existence of least-squares solutions. 
-However, there are many examples in infinite-dimensional spaces where this assumption does not hold. If $\R(F)$ is not closed, 
-we cannot guarantee the existence of a solution to \eqref{linear_least_squares} for every $y \in Y$, but we can restrict ourselves to 
-consider the maximal subset of $Y$ that always admits a least-squares solution. The following results generalize the above 
-results by discarding the assumption that $\R(F)$ is closed and instead restricting our attention to this maximal subset. 
-
-\begin{lemma} 
-If $y \in \R(F) \oplus \R(F)^\perp$ then $P_{\overline{\R(F)}} y \in \R(F)$. 
-\end{lemma} 
-
-\begin{proof} 
-By definition of the projection operator, $P_{\overline{\R(F)}} y \in \overline{\R(F)}$, but we seek to show that under the 
-additional hypothesis $y \in \R(F) \oplus \R(F)^\perp$ that the projection is actually in $\R(F)$. We first note that 
-by assumption $y$ may be decomposed as $y = y^\prime + y^\perp$, where $y^\prime \in \R(F) \subset \overline{\R(F)}$ and 
-$y^\perp \in \R(F)^\perp$. Note that if we show $y^\perp \in \overline{\R(F)}^\perp$ then from the definition of the projection 
-operator we would have \[P_{\overline{\R(F)}} y = P_{\overline{\R(F)}} (y^\prime + y^\perp) = y^\prime \in \R(F)\]
-as desired. To this end, let $v \in \overline{\R(F)}$. Then there is a sequence $(y_i) \subset \R(F)$ such that $y_i \to v$. Using
-the fact that $y^\perp \in \R(F)^\perp$ and the continuity of the inner product, we have 
-\[0 = \lim_{i \to \infty} (y_i|y^\perp) = (\lim_{i \to \infty} y_i|y^\perp) = (v|y^\perp)\]
-which proves $y^\perp \in \overline{\R(F)}^\perp$. Thus, $P_{\overline{\R(F)}} y = y^\prime \in \R(F)$.
-\end{proof} 
-
-With this useful fact established, we may fully characterize $\mathbb{L}$. 
-
-\begin{prop} 
-$\mathbb{L}$ is non-empty (that is, \eqref{linear_least_squares} has a solution) if and only if $y \in \R(F) \oplus \R(F)^\perp$. 
-\end{prop} 
-
-\subsubsection{The Normal Equations}
+\subsection{The Normal Equations}
 
 The following theorem, which provides another useful characterization of least-squares solutions, 
  generalizes the well-known normal equations to infinite-dimensional spaces. 
@@ -489,6 +456,65 @@ To obtain the normal equations, consider:
 \end{align*} 
 where the first step uses the above portion of the proof and the others utilize the basic properties of the adjoint and inner product.
 \end{proof} 
+
+\subsection{Characterization of Solutions}
+
+\subsubsection{Assuming Closed Range}
+
+Given our current assumptions, we cannot conclude the existence of a least-squares solution. The cleanest approach to deal with this 
+issue is to assume $\R(F)$ is closed, allowing us to invoke theorem (\ref{projection_theorem}) to conclude the existence of a solution. While this 
+approach is straightforward, it is ultimately overly restrictive; indeed, there are important classes of linear maps that fail to have closed 
+range. We therefore first characterize $\mathbb{L}$ under the assumption that $\R(F)$ is closed in order to build intuition, and then 
+subsequently drop this assumption in favor of a more general theory. 
+ 
+ \begin{prop}
+ Suppose $\R(F)$ is closed. Then \eqref{linear_least_squares} has a unique minimal norm least-squares solution $x^\dagger$. Moreover, 
+ $x^\dagger \in \N(F)^\perp$ and  $\mathbb{L} = x^\dagger + \N(F)$.
+ \end{prop} 
+ 
+\begin{proof} 
+Since $\R(F)$ is closed, there exists a unique $\hat{y} \in Y$ satisfying $\hat{y} = \min_{y^\prime \in \R(F)} \norm{y^\prime - y}_{Y}$. Let $\hat{x} \in \mathbb{L}$ such that $F\hat{x} = \hat{y}$ (Luenberger 1969, p. 64). Then, 
+ \begin{align*} 
+ \mathbb{L} &= \{x \in X: Fx = \hat{y}\} \\
+                   &= \{x \in X: F(x - \hat{x}) = 0\} \\
+                   &= \hat{x} + \{x - \hat{x} \in X: F(x - \hat{x}) = 0\} \\
+                   &= \hat{x} + \N(F)
+ \end{align*} 
+ Therefore, $ \mathbb{L}$ is a translation of the closed subspace $\N(F)$. It then follows immediately that there exists a unique $x^\dagger \in \mathbb{L}$ of minimal norm, and moreover that $x^\dagger$ is orthogonal to $\N(F)$ (Luenberger 1969, p. 64). From the above derivation we clearly also have $\mathbb{L} = x^\dagger + \N(F)$
+\end{proof} 
+
+If either $X$ or $Y$ is finite-dimensional, then $\R(F)$ is closed and hence solutions always exist. 
+
+\subsubsection{Not Assuming Closed Range}
+
+In the above section, we rely on the assumption that $\R(F)$ is closed to guarantee the existence of a least-squares solution
+to \eqref{linear_least_squares} for every $y \in Y$. 
+If $\R(F)$ is not closed, we cannot cannot assert existence for all $y$  
+but we can restrict ourselves to consider the maximal subset of $Y$ that always admits a least-squares solution. 
+The following results generalize the above results by discarding the assumption that $\R(F)$ is closed and instead 
+restricting our attention to this maximal subset. 
+
+\begin{lemma} 
+If $y \in \R(F) \oplus \R(F)^\perp$ then $P_{\overline{\R(F)}} y \in \R(F)$. 
+\end{lemma} 
+
+\begin{proof} 
+By definition of the projection operator, $P_{\overline{\R(F)}} y \in \overline{\R(F)}$, but we seek to show that under the 
+additional hypothesis $y \in \R(F) \oplus \R(F)^\perp$ that the projection is actually in $\R(F)$. We first note that 
+by assumption $y$ may be decomposed as $y = y^\prime + y^\perp$, where $y^\prime \in \R(F) \subset \overline{\R(F)}$ and 
+$y^\perp \in \R(F)^\perp$. Note that if we show $y^\perp \in \overline{\R(F)}^\perp$ then from the definition of the projection 
+operator we would have \[P_{\overline{\R(F)}} y = P_{\overline{\R(F)}} (y^\prime + y^\perp) = y^\prime \in \R(F)\]
+as desired. To this end, let $v \in \overline{\R(F)}$. Then there is a sequence $(y_i) \subset \R(F)$ such that $y_i \to v$. Using
+the fact that $y^\perp \in \R(F)^\perp$ and the continuity of the inner product, we have 
+\[0 = \lim_{i \to \infty} (y_i|y^\perp) = (\lim_{i \to \infty} y_i|y^\perp) = (v|y^\perp)\]
+which proves $y^\perp \in \overline{\R(F)}^\perp$. Thus, $P_{\overline{\R(F)}} y = y^\prime \in \R(F)$.
+\end{proof} 
+
+With this useful fact established, we may fully characterize $\mathbb{L}$. 
+
+\begin{prop} 
+$\mathbb{L}$ is non-empty (that is, \eqref{linear_least_squares} has a solution) if and only if $y \in \R(F) \oplus \R(F)^\perp$. 
+\end{prop} 
 
  \subsection{Finding Minimal Norm Solutions}
  
